[package]
name = "booking-mini-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.9.0"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "macros"] }
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
chrono = { version = "0.4.31", features = ["serde"] }
log = "0.4.20"
env_logger = "0.10.0"
thiserror = "1.0.49"
anyhow = "1.0.75"
async-trait = "0.1.74"
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }