[package]
name = "booking-mini-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.3.1"
async-trait = "0.1.73"
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres", "chrono"] }
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
dotenv = "0.15"