[package]
name = "booking-mini-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
env_logger = "0.11.8"
log = "0.4.29"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
dotenv = "0.15"