[tool.poetry]
name = "identified-service"
version = "0.1.0"
description = ""
authors = ["manh quan <luumanhquan.91@gmail.com>"]
readme = "README.md"
packages = [{include = "identified_service"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
