[package]
name = "shop-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
argon2rs = "0.2.5"
derive_more = "0.99.17"
dotenv = "0.15.0"

async-trait = "0.1.52"

diesel = { version = "1.4.8", features = ["chrono", "mysql", "postgres", "sqlite", "r2d2", "uuidv07"] }