[package]
name = "shop-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[dependencies]
actix-web = "3.3.3"
actix-cors = "0.5.4"
actix-files = "0.5.0"
actix-identity = "0.3.1"
actix-redis = "0.9.2"
actix-threadpool = "0.3.3"
actix-service = "*"


chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
argon2rs = "0.2.5"
derive_more = "0.99.17"
dotenv = "0.15.0"
serde = "1.0.132"
r2d2 = "0.8.9"
async-trait = "0.1.52"
diesel = { version = "1.4.8", features = ["chrono", "mysql", "postgres", "sqlite", "r2d2", "uuidv07"] }