[package]
name = "shop-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
dotenv = "0.9.0"
serde_derive = "1.0"
juniper = "0.13.1"
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
diesel_codegen = { version = "0.13.0", features = ["postgres"] }
futures = "0.1"
env_logger = "0.6"

async-trait = "0.1.52"
actix-cors = "0.5.4"
actix-files = "0.5.0"
actix-identity = "0.3.1"
actix-redis = "0.9.2"
actix-threadpool = "0.3.3"
actix-dynamic-threadpool = "0.1.0"
actix-web = "4"
actix-service = "*"
actix-rt = "1.0.0"

chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

argon2rs = "0.2.5"
derive_more = "0.99.17"
r2d2 = "0.8.9"

serde = "1.0.144"

soa_derive = "0.8.0"

tonic = "0.8.0"