[package]
name = "purchase_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
purchase_db = {path = "../purchase_db"}
purchase_log = {path = "../purchase_log"}
purchase_cache = {path = "../purchase_cache"}
purchase_consul = {path = "../purchase_consul"}
fake = {version="2", features=['derive']}
actix-web = "4"
postgres = "0.19"